@@ -84,7 +84,6 @@ longusage() {
   echo "	--dmraid		Include DMRAID support"
   echo "	--multipath		Include Multipath support"
   echo "	--iscsi			Include iSCSI support"
-  echo "	--slowusb		Enables extra pauses for slow USB CD boots"
   echo "	--bootloader=grub	Add new kernel to GRUB configuration"
   echo "	--linuxrc=<file>	Specifies a user created linuxrc"
   echo "	--busybox-config=<file>	Specifies a user created busybox config"
@@ -268,10 +267,6 @@ parse_cmdline() {
 		--real-root=*)
 			CMD_REAL_ROOT=`parse_opt "$*"`
 			print_info 2 "CMD_REAL_ROOT: ${CMD_REAL_ROOT}"
-			;;
-		--slowusb)
-			CMD_SLOWUSB=1
-			print_info 2 "CMD_SLOWUSB: ${CMD_SLOWUSB}"
 			;;
 		--dmraid)
 			if [ ! -e /usr/include/libdevmapper.h ]
